--- a/RRWorkshop/src/index.css
+++ b/RRWorkshop/src/index.css
@@ -1,69 +1,117 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
+*{ font-family: Georgia, 'Times New Roman', Times, serif
   margin: 0;
+}
+body,
+body > div {
+  height: 100vh;
+  width: 100vw;
+}
+#container {
+  height: 100%;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  flex-direction: column;
+}
+#container > div {
+  display: flex;
+}
+#navbar {
+  padding: 2em;
+  justify-content: space-evenly;
+  background-color:#adadad;
+
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+#footer {
+  padding: 1em;
+  justify-content: space-evenly;
+  background-color: #adadad;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
+.homelink {
+  color: white; 
 }
-button:hover {
-  border-color: #646cff;
+.redlink {
+  color: red; 
 }
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.orangelink {
+  color: orange; 
+}
+.yellowlink{
+  color: yellow;
+}
+.greenlink {
+  color: green; 
+}
+.bluelink {
+  color: blue; 
+}
+.purplelink {
+  color: purple; 
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.homelink:hover, 
+.redlink:hover, 
+.orangelink:hover, 
+.yellowlink:hover, 
+.greenlink:hover, 
+.bluelink:hover, 
+.purplelink:hover {
+  font-weight: bolder;
+  font-style: italic;
+}
+
+/* .homelink, .redlink, .orangelink, .yellowlink, .greenlink, .bluelink, .purplelink:hover {
+   font-weight: bolder;
+} */
+
+#main-section {
+  flex-grow: 1;
+}
+#main-section > div {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.red {
+  background-color: #b05f6d;
+  color: white;
+}
+.orange {
+  background-color: orange;
+  color: white;
+}
+.yellow {
+  background-color: yellow;
+  color: white;
+}
+.green {
+  background-color: green;
+  color: white;
+}
+.blue {
+  background-color: #275db3;
+  color: white;
+}
+.purple {
+  background-color: purple;
+  color: white;
+}
+
+.home {
+  background: linear-gradient(
+        90deg,
+        rgba(255, 0, 0, 1) 0%,
+        rgba(255, 154, 0, 1) 10%,
+        rgba(208, 222, 33, 1) 20%,
+        rgba(79, 220, 74, 1) 30%,
+        rgba(63, 218, 216, 1) 40%,
+        rgba(47, 201, 226, 1) 50%,
+        rgba(28, 127, 238, 1) 60%,
+        rgba(95, 21, 242, 1) 70%,
+        rgba(186, 12, 248, 1) 80%,
+        rgba(251, 7, 217, 1) 90%,
+        rgba(255, 0, 0, 1) 100%
+    );
+    color: white; 
 }
